@@ -39,6 +39,7 @@ Gaupol 0.13
 Gaupol 0.14
 ===========
 
+ [ ] Switch to Git, find a host for master branch
  [?] Handle fancy quotes, dashes and ellipses in text corrections
      - As bogus regular expression groups?
        o (?gaupol-dash)
