@@ -1,3 +1,9 @@
+2008-08-20  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* data/glade/dialogs/language.glade:
+	* gaupol/gtk/dialogs/language.py:
+	Convert to landscape layout.
+
 2008-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/page.py (Page._on_project_*): Call
